modifier les fchier web?xml et persistence pour quil adapte a jav 17